fix scripts, content of binary distribution zip (#783)
* fix scripts, content of binary distribution zip
* remove invalid osgi exports, make osgi exports looking the same as in previous version, tweak dependencies
* include new schemas, no handling yet
* add dist do deployable modules

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>